<resources>
    <string name="app_name">Blog</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="register_label">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="have_account">Already have an account ? Login</string>
    <string name="login_label">Login</string>
    <string name="not_have_account">Not have an account? Register</string>
    <string name="logout">Logout</string>
    <string name="forget_password">Forget password? Recover</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="search">Search</string>
    <string name="chats">Chats</string>
    <string name="start_typing">Start typing…</string>
    <string name="send_message">Send Message</string>
    <string name="msg_token_fmt">myUID</string>
    <string name="add_post">Add Post</string>
    <string name="enter_post_title">Enter Post Title</string>
    <string name="post_image">Post Image</string>
    <string name="enter_post_description">Enter Post Description</string>
    <string name="upload">Upload</string>
    <string name="_33_min">33 min</string>
    <string name="more_options_button">More Options Button</string>
    <string name="title">Title</string>
    <string name="the_description_of_the_post">The Description Of The Post</string>
    <string name="_1_2k_likes">1.2K Likes</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="enter_comment">Enter comment…</string>
    <string name="send_comment_button">send comment button</string>
    <string name="_1_2k_comments">1.2K Comments</string>
    <string name="comments">Comments</string>
    <string name="this_is_actual_comment">This is actual comment</string>
    <string name="_12_06_2019">12/06/2019</string>
    <string name="his_name">His Name</string>
    <string name="the_last_message">The last message</string>
    <string name="online_status_circle_image">Online Status Circle Image</string>
    <string name="message_image">Message Image</string>
    <string name="attach_button">Attach Button</string>
    <string name="settings">Settings</string>
    <string name="post_notification">Post Notification</string>
    <string name="block_state">Block State</string>
    <string name="notifications">Notifications</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="online">online</string>
    <string name="delivered">delivered</string>
    <string name="_15_02_2020_04_56_pm">15/02/2020 04:56 PM</string>
    <string name="my_message">My Message</string>
    <string name="his_message">His Message</string>
</resources>
