<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/color_white"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/uPictureIv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_users" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/uNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/color_black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_33_min" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/moreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/more_options_button"
                android:src="@drawable/ic_more_black" />

        </LinearLayout>

        <TextView
            android:id="@+id/pTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autoLink="all"
            android:text="@string/the_description_of_the_post"
            android:textColor="@color/color_black" />

        <ImageView
            android:id="@+id/pImageIv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/color_white"
            android:contentDescription="@string/post_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pLikesTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/_1_2k_likes"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/pCommentsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_1_2k_comments"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#F5F0F0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_white"
                android:drawableStart="@drawable/ic_like_black"
                android:drawableLeft="@drawable/ic_like_black"
                android:drawablePadding="5dp"
                android:text="@string/like"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/commentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_white"
                android:drawableStart="@drawable/ic_comment_black"
                android:drawableLeft="@drawable/ic_comment_black"
                android:drawablePadding="5dp"
                android:text="@string/comment"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_white"
                android:drawableStart="@drawable/ic_share_black"
                android:drawableLeft="@drawable/ic_share_black"
                android:drawablePadding="5dp"
                android:text="@string/share"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#F5F0F0" />

    </LinearLayout>

</androidx.cardview.widget.CardView>