<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Activities.RegisterActivity">


    <!--Register Label-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/register_label"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="25sp" />
    <!--Input Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTIL"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTIL"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Register User-->
    <Button
        android:id="@+id/registerBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_account_box_white"
        android:drawableLeft="@drawable/ic_account_box_white"
        android:drawablePadding="5dp"
        android:text="@string/register" />

    <!-- Have an account? click to go to Login Screen-->
    <TextView
        android:id="@+id/have_account_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerBtn"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/have_account"
        android:textAlignment="center"
        android:textColor="@color/color_black" />

</RelativeLayout>