<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Activities.LoginActivity">


    <!--Login Label-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login_label"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:textSize="25sp" />

    <!--Input Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Input Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTIL"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Login User-->
    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_login_white"
        android:drawableLeft="@drawable/ic_login_white"
        android:drawablePadding="5dp"
        android:text="@string/login" />
    <!-- Show dialog to recover password-->
    <TextView
        android:id="@+id/recover_pass_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:gravity="center_horizontal"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/color_black" />

    <!--Sign in with google account-->
    <!-- <com.google.android.gms.common.SignInButton
         android:id="@+id/google_login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/recover_pass_tv"
         />-->
    <!-- Not have an account? click to go to Register Screen-->
    <TextView
        android:id="@+id/not_have_account_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/not_have_account"
        android:textAlignment="center"
        android:textColor="@color/color_black" />

</RelativeLayout>