<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <!--EditText: Input post title-->
        <EditText
            android:id="@+id/post_title_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editextstyle"
            android:ellipsize="end"
            android:hint="@string/enter_post_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp" />

        <!--ImageView: Input post image-->
        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/post_image"
            android:minHeight="200dp" />

        <!--EditText: Input post description-->
        <EditText
            android:id="@+id/post_description_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editextstyle"
            android:gravity="start"
            android:hint="@string/enter_post_description"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:padding="10dp" />

        <!--Button: Publish post to firebase-->
        <Button
            android:id="@+id/post_upload_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/upload" />

    </LinearLayout>

</ScrollView>