<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/messageLayout"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileIvChat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_default_users"
            android:visibility="gone" />

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15_02_2020_04_56_pm"
            android:textColor="@color/color_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/messageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_sender"
            android:layout_alignParentEnd="true"
            android:padding="15dp"
            android:text="@string/my_message"
            android:layout_toRightOf="@id/timeTv"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/timeTv" />

        <ImageView
            android:id="@+id/messageIv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/bg_sender"
            android:padding="15dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_image_black"
            android:adjustViewBounds="true"
            android:contentDescription="@string/message_image"
            android:layout_alignParentRight="true" />


    </RelativeLayout>

    <TextView
        android:id="@+id/isSeenTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/delivered"
        android:textAlignment="textEnd"
        android:textColor="@color/color_black" />

</LinearLayout>