<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    app:cardBackgroundColor="@color/color_white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/notificationAvatarIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_default_users" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/color_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notificationsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textColor="@color/color_black" />

            <TextView
                android:id="@+id/timeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_06_2019" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>